<resources>
    <string name="app_name">12th Man</string>
    <string name="sign_in">Sign In</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_your_mobile">Verify your mobile</string>
    <string name="enter_your_otp_code_here">Enter your OTP code here</string>
    <string name="didn_t_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="user_name">User Name</string>
    <string name="team">team</string>
    <string name="userimage">UserImage</string>
    <string name="profile_image">Profile image</string>
    <string name="account_settings">Account Settings</string>
    <string name="personal_information">Personal information</string>
    <string name="support">Support</string>
    <string name="get_help_faq_s">Get help - FAQ\'s</string>
    <string name="rate_feedback"><![CDATA[Rate & Feedback]]></string>
    <string name="share_the_app">Share the app</string>
    <string name="share_icon">Share Icon</string>
    <string name="logout">Logout</string>
    <string name="global_chat">Global Chat</string>
    <string name="search">search</string>
    <string name="search_icon">search_icon</string>
    <string name="more">more</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_account_to_continue">Create your account to continue</string>
    <string name="create">create</string>
    <string name="fixture">Fixture</string>
    <string name="chat_ranking">Chat Ranking</string>
    <string name="ranking_of_team_based_on_number_of_chats_per_day">Ranking of team based on number of chats per day</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="personal_info_edit">Personal Info Edit</string>
    <string name="edit_your_account_details">Edit your account details</string>
    <string name="update">update</string>
    <string name="welcomeText">12th Man</string>
</resources>