<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".OTPScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_mobile"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_your_otp_code_here"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:itemCount="6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/didn_t_receive_an_otp"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/resendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/resend_otp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/verify"
        app:backgroundTint="@color/colorRed" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>