<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="30dp"
    android:paddingRight="25dp"
    android:paddingBottom="30dp"
    android:windowFullscreen="true"
    android:gravity="center"
    tools:context=".SignInScreen">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:text="@string/let_s_get_started"
        android:textAlignment="center"
        android:textColor="@color/colorGray"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileNumberText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:hint="@string/mobile_number"
        app:boxStrokeColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:hintTextColor="@color/colorBlack">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileNumberTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mobileNumberText"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/colorRed"
        />

</RelativeLayout>