<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:contentDescription="@string/profile_image"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="@color/colorBlack"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/teamText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/account_settings"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:layout_marginStart="20dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/personalInfo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/personal_information"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_person"
                        app:tint="@color/colorBlack"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <View style="@style/Divider" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/support"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:layout_marginStart="20dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/get_help_faq_s"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_questionmark"
                        app:tint="@color/colorBlack"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <View style="@style/Divider" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rateFeedBackCard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rate_feedback"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_star_border"
                        app:tint="@color/colorBlack"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <View style="@style/Divider" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/shareCard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/share_the_app"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_share"
                        app:tint="@color/colorBlack"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <View style="@style/Divider" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingHorizontal="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center_vertical">


                    <TextView
                        android:id="@+id/logoutText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/logout"
                        android:textColor="@color/colorRed"
                        android:textSize="18sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>